--- a/styles.scss
+++ b/styles.scss
@@ -4,6 +4,7 @@ body {
   padding: 1em;
   background-color: black;
   color: white;
+  font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 #app-container {
@@ -41,8 +42,8 @@ body {
 }
 
 #timer {
-  width: 400px;
-  height: 400px;
+  max-width: 80%;
+  max-height: 50%;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 2em;
